# named-routes-axum

./: CHANGE_LOG.md  Cargo.toml  README.md
examples/any/: main.rs
examples/any_of/: main.rs
examples/basic/: main.rs
examples/from_raw_router/: main.rs
examples/given_inner/: main.rs
examples/merge/: main.rs
examples/merge_given/: main.rs
examples/middleware/: main.rs
examples/middleware_state/: main.rs
examples/nest/: main.rs
examples/nest_given/: main.rs
examples/noname/: main.rs
examples/nonamex/: main.rs
examples/part/: main.rs
examples/tuple_parts/: main.rs
examples/vec_parts/: main.rs
src/: helpers.rs  lib.rs  main.rs  name_repo.rs  redirector.rs  route_path.rs  router_wrapper.rs  service.rs
