[package]
name = "named_routes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["default"] }
busybody = "0.3.8"
tokio = { version = "1.37.0", features = ["full"] }
