[package]
name = "named_routes_axum"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "Give Axum routes names"
repository = "https://github.com/shiftrightonce/named-routes-axum"
keywords = ["webdev", "web", "routing", "router", "axum"]
categories = ["web-programming"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["default"] }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }
rand = "0.8.5"
