[package]
name = "named_routes_axum"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "Give Axum routes names"
repository = "https://github.com/shiftrightonce/named-routes-axum"
keywords = ["webdev", "web", "routing", "router", "axum"]
categories = ["web-programming"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.1", features = ["default"] }
tower = { version = "0.5.2" }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }
rand = "0.9"
